# CxC

./: .gitignore  .travis.yml  AGENTS.md  CHANGELOG  CMakeLists.txt  LICENSE  README.md  README.zh-CN.md  README_BUILD.md  build.bat  build.sh
examples/: CMakeLists.txt  basic_usage.c
src/: cxc.h
src/container/: container.h  list.c  list.h  map.c  map.h  set.c  set.h  string.c  string.h  vector.c  vector.h
src/core/: core.h  error.c  error.h  macros.h  memory.c  memory.h  types.h
src/exception/: exception.c  exception.h
src/lambda/: lambda.h
src/oop/: class.c  class.h  encapsulation.h  inheritance.c  inheritance.h  oop.h  polymorphism.c  polymorphism.h
src/sp/: raii.c  raii.h  shared_ptr.c  shared_ptr.h  sp.h  unique_ptr.c  unique_ptr.h  weak_ptr.c  weak_ptr.h
src/template/: template.h
src/util/: algorithm.c  algorithm.h  function.c  function.h  util.h
test/: CMakeLists.txt  README.md  test_container.cpp  test_core.cpp  test_exception.cpp  test_lambda.cpp  test_oop.cpp  test_sp.cpp  test_template.cpp  test_util.cpp
